// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableLinksTextCard component renders correctly 1`] = `
<div>
  <div
    class="ExpandableLinksTextCard-root-1"
  >
    <h3
      class="MuiTypography-root ExpandableLinksTextCard-title-2 Typography-root-8 MuiTypography-h5"
      data-testid="typography"
    >
      Heading One
    </h3>
    <nav>
      <div
        class="ExpandableLinksTextCard-shownLinksContainer-3"
      >
        <div
          class="ExpandableLinksTextCard-linkWrapper-4"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-6 AnchorLink-root-16 Anchorlink MuiTypography-colorPrimary"
            href="/"
          >
            <span>
              Link One
            </span>
          </a>
        </div>
        <div
          class="ExpandableLinksTextCard-linkWrapper-4"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-6 AnchorLink-root-16 Anchorlink MuiTypography-colorPrimary"
            href="/"
          >
            <span>
              Link Two
            </span>
          </a>
        </div>
        <div
          class="ExpandableLinksTextCard-linkWrapper-4"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-6 AnchorLink-root-16 Anchorlink MuiTypography-colorPrimary"
            href="/"
          >
            <span>
              Link Three
            </span>
          </a>
        </div>
      </div>
      <div
        class="ExpandableLinksTextCard-hiddenLinksContainer-7"
      />
    </nav>
  </div>
</div>
`;

exports[`ExpandableLinksTextCard component renders correctly with closeButton 1`] = `
<div>
  <div
    class="ExpandableLinksTextCard-root-104"
  >
    <h3
      class="MuiTypography-root ExpandableLinksTextCard-title-105 Typography-root-111 MuiTypography-h5"
      data-testid="typography"
    >
      Heading One
    </h3>
    <nav>
      <div
        class="ExpandableLinksTextCard-shownLinksContainer-106"
      >
        <div
          class="ExpandableLinksTextCard-linkWrapper-107"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-109 AnchorLink-root-119 Anchorlink MuiTypography-colorPrimary"
            href="/"
          >
            <span>
              Link One
            </span>
          </a>
        </div>
        <div
          class="ExpandableLinksTextCard-linkWrapper-107"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-109 AnchorLink-root-119 Anchorlink MuiTypography-colorPrimary"
            href="/"
          >
            <span>
              Link Two
            </span>
          </a>
        </div>
      </div>
      <div
        class="ExpandableLinksTextCard-hiddenLinksContainer-110"
      >
        <div>
          <div>
            <div
              class="ExpandableLinksTextCard-linkWrapper-107"
            >
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-109 AnchorLink-root-119 Anchorlink MuiTypography-colorPrimary"
                href="/"
              >
                <span>
                  Link Three
                </span>
              </a>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-125 MuiButton-contained Button-contained-127 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-128"
            >
              Close
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`ExpandableLinksTextCard component renders correctly with download action model 1`] = `
<div>
  <div
    class="ExpandableLinksTextCard-root-63"
  >
    <h3
      class="MuiTypography-root ExpandableLinksTextCard-title-64 Typography-root-70 MuiTypography-h5"
      data-testid="typography"
    >
      Heading One
    </h3>
    <nav>
      <div
        class="ExpandableLinksTextCard-shownLinksContainer-65"
      >
        <div
          class="ExpandableLinksTextCard-linkWrapper-66"
        >
          <svg
            class="ExpandableLinksTextCard-icon-67"
          />
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-68 AnchorLink-root-78 Anchorlink MuiTypography-colorPrimary"
            href="/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              Link One
            </span>
          </a>
        </div>
      </div>
      <div
        class="ExpandableLinksTextCard-hiddenLinksContainer-69"
      >
        <div>
          <div />
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-84 MuiButton-contained Button-contained-86 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-87"
            >
              Open
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`ExpandableLinksTextCard component renders correctly with more than 3 links 1`] = `
<div>
  <div
    class="ExpandableLinksTextCard-root-22"
  >
    <h3
      class="MuiTypography-root ExpandableLinksTextCard-title-23 Typography-root-29 MuiTypography-h5"
      data-testid="typography"
    >
      Heading One
    </h3>
    <nav>
      <div
        class="ExpandableLinksTextCard-shownLinksContainer-24"
      >
        <div
          class="ExpandableLinksTextCard-linkWrapper-25"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-27 AnchorLink-root-37 Anchorlink MuiTypography-colorPrimary"
            href="/"
          >
            <span>
              Link One
            </span>
          </a>
        </div>
        <div
          class="ExpandableLinksTextCard-linkWrapper-25"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-27 AnchorLink-root-37 Anchorlink MuiTypography-colorPrimary"
            href="/"
          >
            <span>
              Link Two
            </span>
          </a>
        </div>
        <div
          class="ExpandableLinksTextCard-linkWrapper-25"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover ExpandableLinksTextCard-link-27 AnchorLink-root-37 Anchorlink MuiTypography-colorPrimary"
            href="/"
          >
            <span>
              Link Three
            </span>
          </a>
        </div>
      </div>
      <div
        class="ExpandableLinksTextCard-hiddenLinksContainer-28"
      >
        <div>
          <div />
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-43 MuiButton-contained Button-contained-45 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-46"
            >
              Open
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;
